--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "heroku-postbuild": "cd server && npx knex migrate:latest",
-    "client": "cd client && yarn start",
+    "client": "cd client && npm run start",
     "server": "cd server && nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "test": "cd server && jest",
     "test:watch": "cd server && jest --watch",
     "start": "cd server && node server.js"
@@ -15,10 +15,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "jest": "^24.9.0",
-    "knex": "^0.20.5",
+    "knex": "^0.20.6",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
-    "pg": "^7.14.0",
+    "pg": "^8.0.3",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
