--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-PGUSER=
+PGUSER=diego
 PGHOST=localhost
-PGPASSWORD=
-PGDATABASE=
+PGPASSWORD=1234
+PGDATABASE=todo_db
 PGPORT=5432
-PORT=5000
+PORT=5001
